2001-01-29  Mirko Viviani  <mirko.viviani@rccr.cremona.it>

	* GSWeb.framework/GSWApplication.m (GSWApplicationMain): use NSLog to
	print the exception.
	* GSWeb.framework/GSWTransactionRecord.m ([GSWTransactionRecord
	-initWithCoder:]), ([GSWTransactionRecord -encodeWithCoder:]): NSObject
	does not support NSCoding. Fixed.
	* GSWeb.framework/GSWPageDefElement.m ([GSWPageDefElement
	-initWithCoder:]), ([GSWPageDefElement -encodeWithCoder:]): likewise.
	* GSWeb.framework/GSWComponentDefinition.m ([GSWComponentDefinition
	-initWithCoder:]), ([GSWComponentDefinition -encodeWithCoder:]):
	likewise.
	* GSWeb.framework/GSWTemplateParserXML.h|m: fixed libxml includes.

	(patches by Sungjin Chun <ninja@linuxone.co.kr>)
	* GSWeb.framework/GSWUtils.m: changed implementation of
	NSMutableOrderedArray that now inherits from NSMutableArray.
	* GSWeb.framework/GSWUtils.h (NSMutableArray): added ivar.
	* GSWeb.framework/GSWMultiKeyDictionary.m: fixes.

2000-12-08  Mirko Viviani  <mirko.viviani@rccr.cremona.it>

	* GSWeb.framework/GSWDisplayGroup.m ([GSWDisplayGroup
	-setSelectedObjects:]): implemented.
	* GSWeb.framework/GSWCheckBoxList.m ([GSWCheckBoxList
	-_slowTakeValuesFromRequest:inContext:]): implemented auto value
	attribute. Fixed object selections.
	([GSWCheckBoxList -appendToResponse:inContext:]): likewise.

2000-12-03  Mirko Viviani  <mirko.viviani@rccr.cremona.it>

	* GSWeb.framework/GSWComponentRequestHandler.m
	([GSWComponentRequestHandler -lockedDispatchWithPreparedSession:
	inContext:elements:]): do not 'clear' cookie if not enabled.
	* GSWeb.framework/GSWComponent.m ([GSWComponent
	-performParentAction:]): implemented.

2000-11-28  Mirko Viviani  <mirko.viviani@rccr.cremona.it>

	* GSWeb.framework/GSWDisplayGroup.m ([GSWDisplayGroup
	-insertObjectAtIndex:]): fixed missing method call.

2000-11-24  Mirko Viviani  <mirko.viviani@rccr.cremona.it>

	* GSWeb.framework/GSWDisplayGroup.m ([GSWDisplayGroup
	-setCurrentBatchIndex:]): fixed index out of bound.
